--- a/src/components/QuizTemplate.module.css
+++ b/src/components/QuizTemplate.module.css
@@ -1,8 +1,3 @@
-:root {
-    --margin: 3em;
-}
-
-
 .container {
     z-index: 8;
     position: absolute;
@@ -21,6 +16,24 @@
     background: white;
     border-radius: 2em;
 }
+    .question {
+        max-height: 30vh;
+    }
+
+        .question img {
+            max-width: 100%;
+            max-height: 25vh;
+            height: 100%;
+        }
+
+        .question p {
+            font-weight: bold;
+            font-size: 1em;
+        }
+
+        .answers p {
+            font-size: .8em;
+        }
 
     .container nav {
         display: flex;
@@ -30,11 +43,13 @@
         .container nav button {
             background: var(--secondary);
             font-weight: bold;
+            font-size: 1.2em;
             color: white;
             border-radius: 2em;
-            width: 2em;
-            height: 2em;
-            margin: 1em;
+            transform: rotate(45deg);
+            width: 1.5em;
+            height: 1.5em;
+            margin: 0.5em 0.5em 0em 0em;
         }
 
     .container header {
@@ -49,6 +64,8 @@
     justify-content: space-between;
     flex-grow: 4;
 }
+
+    
 
     .inner button {
         padding: 1em;
@@ -73,10 +90,6 @@
         -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
         -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
         box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-    }
-
-    .inner h2 {
-        padding-bottom: 2em;
     }
 
 .background {
