--- a/src/components/stages/HealthAndSafety.module.css
+++ b/src/components/stages/HealthAndSafety.module.css
@@ -11,6 +11,10 @@
     justify-content: center;
     align-items: center;
 }
+    
+    .progress h1 {
+        filter: drop-shadow(2px 4px 6px black);
+    }
 
     .progress .ring {
         position: absolute;
@@ -49,6 +53,7 @@
             stroke: rgb(34, 58, 192);
             stroke-width: 3;
         }
+
 
 .navigation {
     z-index: 3;
