--- a/src/components/pages/UserInterface.module.css
+++ b/src/components/pages/UserInterface.module.css
@@ -130,6 +130,7 @@
 
 
 .menu {
+    width: 100%;
     position: relative;
     display: flex;
     overflow: auto;
@@ -142,19 +143,6 @@
 
 .stageSelect {
     position: relative;
-}
-
-.menushadow {
-    position: absolute;
-    border-radius: 1rem;
-    width:100%;
-    height:100%;
-    top: 0;
-    left: 0;
-    
-    z-index: 8;
-    pointer-events: none;
-    margin-right: 1rem;
 }
 
 .item {
@@ -293,7 +281,7 @@
 
 .infoContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 0.5em;
 }
 
@@ -354,6 +342,11 @@
     border-radius: 0.5em;
 }
 
+.quiz:active {
+    background: rgb(107, 107, 107);
+    border: 1px solid white;
+}
+
     .quiz figure img {
         width: 100%;
     }
@@ -367,6 +360,35 @@
     }
 
     .quiz aside > header {
+        display: flex;
+        justify-content: space-between;
+        font-weight: bold;
+        margin-bottom: 1em;
+    }
+
+.quizCompleted {
+    background-color: gray;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+    margin: 1em 0em;
+    border-radius: 0.5em;
+}
+
+    .quizCompleted figure img {
+        width: 100%;
+    }
+
+    .quizCompleted aside {
+        text-align: center;
+        color: rgb(39, 39, 39);
+        font-size: 0.8em;
+        width: 100%;
+        margin: 0em 1em;
+    }
+
+    .quizCompleted aside > header {
         display: flex;
         justify-content: space-between;
         font-weight: bold;
@@ -440,14 +462,6 @@
 
 
 @media only screen and (min-width: 1200px) {
-    .menushadow {
-        width: 98%;
-    }
-
-    .menu {
-        width: 45vw;
-        
-    }
 
     .container {
         flex-direction: row;
@@ -467,4 +481,12 @@
         .quiz figure {
             max-width: 30%;
         }
+
+        .quizCompleted {
+            flex-direction: row;
+        }
+    
+            .quizCompleted figure {
+                max-width: 30%;
+            }
 }
